--- a/school/css/app.css
+++ b/school/css/app.css
@@ -50,7 +50,18 @@ html,body{
     animation-iteration-count: infinite;
     animation-timing-function: ease;
 }
-
+.doctor-svg{
+    _transform: translateX(1000px);
+}
+.doctor-svg.move{
+    animation: doctorMove 3s ease forwards ;
+    /* animation-duration: 3s;
+    animation-timing-function: ease;
+    animation-fill-mode: forwards; */
+}
+.doctor-svg.move>g{
+    animation: doctorStep 0.5s ease forwards infinite;
+}
 @keyframes studentShake{
     0%{
         transform: rotate(0deg);
@@ -66,6 +77,23 @@ html,body{
     }
     100%{
         transform: rotate(0deg);
+    }
+}
+
+@keyframes doctorMove {
+    0%{
+        transform: translateX(1000px);
+    }
+    100%{
+        transform: translateX(0);
+    }
+}
+@keyframes doctorStep {
+    0%{
+        transform: translateY(0);
+    }
+    100%{
+        transform: translateY(-10px);
     }
 }
 
@@ -197,6 +225,9 @@ html,body{
     width: 100%;
     max-width: 720px;
 }
+.modal-operation.success{
+    border-color: #ABBA21;
+}
 .operation-text{
     text-align: center;
     font-size: 24px;
@@ -220,4 +251,161 @@ html,body{
 .operation-action{
     display: flex;
     justify-content: center;
+}
+
+/* COUTDOWN */
+.coutdown{
+    position: absolute;
+    background: #FC5756;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    border: 8px solid #FEB728;
+    width: 100%;
+    height: 100%;
+    max-width: 560px;
+    max-height: 260px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.coutdown>span{
+    color: white;
+    font-size: 128px;
+}
+
+/* MODAL DOCTOR */
+.modal-doctor{
+    position: absolute;
+    border: 2px solid #FC5756;
+    border-radius: 5px;
+    background: white;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 100%;
+    height: 100%;
+    max-width: 1060px;
+    max-height: 460px;
+    display: flex;
+    flex-direction: column;
+    padding: 40px;
+}
+.modal-doctor_content{
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    gap:40px;
+    flex-wrap: wrap;
+}
+.modal-doctor_content_item{
+    transition: all 0.3s;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 20%;
+}
+.modal-doctor_content_item:hover{
+    cursor: pointer;
+    transform: scale(1.1);
+}
+.item_svg>svg{
+    width: 100%;
+    height: 100%;
+    min-height: 100px;
+}
+.modal-doctor_action{
+    margin-top:40px;
+    text-align: center;
+}
+.modal-doctor-error{
+    position: absolute;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    background: #E46143;
+    color: white;
+    padding: 40px;
+}
+.modal-doctor-error_content{
+    font-size: 24px;
+    text-align: center;
+}
+.modal-doctor-error_action{
+    text-align: center;
+    margin-top: 40px;
+}
+
+
+.modal-diagnoz{
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%);
+  width:100%;
+  max-width:1060px;
+  background:white;
+  border:2px solid #003758;
+  padding: 40px;
+}
+.modal-diagnoz>h3{
+  position:relative;
+  font-size:32px;
+  text-align:center;
+  font-weight:500;
+  padding:0;
+  margin:0;
+}
+.modal-diagnoz_variants{
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  gap:26px;
+  margin-top:40px;
+}
+.btn-diagnoz{
+  transition: all 0.2s;
+  border:2px solid #003758;
+  background:none;
+  color:#003758;
+  font-size:20px;
+  padding: 20px 50px;
+  text-align:left;
+  width:100%;
+  max-width:560px;
+}
+.btn-diagnoz:hover{
+  cursor:pointer;
+  background:#003758;
+  color:white;
+}
+
+/* error-modal */
+.modal-error{
+  background:#E46143;
+  padding:60px;
+  color:white;
+  font-size:24px;
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%);
+}
+.modal-error_text{
+  text-align:center;
+}
+.modal-error_action{
+  text-align:center;
+  margin-top:40px;
+}
+.btn-error{
+  background:none;
+  border:2px solid white;
+  color:white;
+  padding:20px 40px;
+  font-size:24px;
+}
+.btn-error:hover{
+  cursor:pointer;
+  background:#c74d32;
 }
