--- a/school/css/app.css
+++ b/school/css/app.css
@@ -67,6 +67,33 @@ html,body{
 .doctor-svg.move>g{
     animation: doctorStep 0.5s ease forwards infinite;
 }
+/* АНИМАЦИЯ ПЕСОЧНЫХ ЧАСОВ */
+.clockRotate{
+    transform-box: fill-box;
+    transform-origin: center;
+    animation: clockRatate 1.5s cubic-bezier(0.455, 0.030, 0.515, 0.955) both 2;
+}
+@keyframes clockRatate{
+    from{
+        transform: rotate(0deg);
+    }
+    to{
+        transform: rotate(360deg);
+    }
+}
+/* ======================== */
+.flowerRotate{
+    animation: flowerRatate 1.5s cubic-bezier(0.455, 0.030, 0.515, 0.955) both infinite;
+    animation-direction: alternate;
+}
+@keyframes flowerRatate{
+    from{
+        transform: rotate(-2deg);
+    }
+    to{
+        transform: rotate(2deg);
+    }
+}
 @keyframes studentShake{
     0%{
         transform: rotate(0deg);
@@ -337,9 +364,9 @@ html,body{
     left: 50%;
     transform: translate(-50%,-50%);
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     max-width: 1060px;
-    max-height: 460px;
+    /* max-height: 460px; */
     display: flex;
     flex-direction: column;
     padding: 40px;
@@ -564,9 +591,9 @@ html,body{
     /* left: 50%; */
     /* transform: translate(-50%,-50%); */
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     max-width: 1060px;
-    max-height: 460px;
+    max-height: 100%;
     display: flex;
     flex-direction: column;
     padding: 40px;
@@ -575,10 +602,18 @@ html,body{
     text-align: center;
     text-transform: uppercase;
     font-size: 24px;
+    font-weight: bold;
+    color: #383838;
 }
 .resume-content{
     flex: 1;
-    background-color: #00365809;
+    overflow: auto;
+}
+.resume-content>p{
+    font-size: 18px;
+}
+.resume-content>p:last-child{
+    margin-bottom: 40px;
 }
 .resume-action{
     text-align: center;
