--- a/happy-birthday/style.css
+++ b/happy-birthday/style.css
@@ -1,3 +1,12 @@
+html,body{
+	margin: 0;
+	padding: 0;
+	width: 100vw;
+	height: 100vh;
+}
+*{
+	border-block: border-bloc;
+}
 div#container {
 	max-width: 95%;
 	margin: 0px auto;
