--- a/happy-birthday/style.css
+++ b/happy-birthday/style.css
@@ -3,6 +3,7 @@ html,body{
 	padding: 0;
 	width: 100vw;
 	height: 100vh;
+	font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 *{
 	border-block: border-bloc;
