--- a/happy-birthday/style.css
+++ b/happy-birthday/style.css
@@ -4,11 +4,22 @@ html,body{
 	width: 100vw;
 	height: 100vh;
 	font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+	display: flex;
+	flex-direction: column;
+
+	margin: 0;
+	padding: 0;
+	width: 100vw;
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
 }
 *{
 	border-block: border-bloc;
 }
 div#container {
-	max-width: 95%;
-	margin: 0px auto;
+	flex: 1;
+	display: flex;
+	align-content: center;
+	justify-content: center;
 }
