--- a/happy-birthday/style.css
+++ b/happy-birthday/style.css
@@ -6,7 +6,7 @@ html,body{
 	font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 	display: flex;
 	flex-direction: column;
-
+	overflow: hidden;
 	margin: 0;
 	padding: 0;
 	width: 100vw;
@@ -22,4 +22,7 @@ div#container {
 	display: flex;
 	align-content: center;
 	justify-content: center;
+}
+.nameT{
+	text-anchor: start;
 }
